// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducer() @@init 1`] = `
"Snapshot Diff:
  Comparing two different types of values. Expected undefined but received string."
`;

exports[`reducer() TIMESHEET-PC/UI/DAILY_ATT_TIME_DIALOG/CLOSE 1`] = `
"Snapshot Diff:
- First value
+ Second value

- id
+ "
`;

exports[`reducer() TIMESHEET-PC/UI/DAILY_ATT_TIME_DIALOG/OPEN 1`] = `
"Snapshot Diff:
- First value
+ Second value

- 
+ id"
`;
